--- a/index.html
+++ b/index.html
@@ -1,32 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Privacy Policy</title>
 <meta charset="UTF-8">
+<title>Privacy Policy - Early Stage Diabetes Prediction</title>
+<style>
+body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; line-height: 1.6; padding: 20px; }
+h1, h2 { color: #2c7a7b; }
+</style>
 </head>
+
 <body>
-<h2>Privacy Policy — Early Stage Diabetes Prediction</h2>
 
-<p>This application is developed for academic and research purposes.</p>
+<h1>Privacy Policy</h1>
+<p><strong>App:</strong> Early Stage Diabetes Prediction</p>
+<p><strong>Developer:</strong> S. P. Sajjan</p>
+<p><strong>Effective Date:</strong> 2026</p>
 
-<h3>Information Collected</h3>
+<h2>Overview</h2>
+<p>This application is developed for academic and research purposes. It provides an AI-based diabetes risk assessment using user-provided inputs.</p>
+
+<h2>Information We Collect</h2>
 <ul>
 <li>Age</li>
 <li>Gender</li>
-<li>Symptom inputs</li>
+<li>Clinical symptom inputs</li>
 </ul>
 
-<h3>Data Usage</h3>
-<p>Data is used only for AI-based diabetes risk assessment.</p>
+<h2>Information We Do NOT Collect</h2>
+<ul>
+<li>Name</li>
+<li>Email address</li>
+<li>Phone number</li>
+<li>Location data</li>
+<li>Biometric data</li>
+</ul>
 
-<h3>Data Storage</h3>
-<p>No personal data is permanently stored.</p>
+<h2>How Data Is Used</h2>
+<p>The collected data is used only to generate an AI-based diabetes risk assessment within the app.</p>
 
-<h3>Medical Disclaimer</h3>
-<p>This app does not provide medical diagnosis. Consult a doctor.</p>
+<h2>Data Storage</h2>
+<p>No personal data is permanently stored. Inputs are processed temporarily and not retained after the session ends.</p>
 
-<h3>Contact</h3>
-<p>Developer: S. P. Sajjan<br>Email: sajjanvsl@gmail.com</p>
+<h2>Third-Party Sharing</h2>
+<p>We do not sell, trade, or share user data with third parties.</p>
+
+<h2>Security</h2>
+<p>The application is served over HTTPS, ensuring encrypted data transmission.</p>
+
+<h2>Medical Disclaimer</h2>
+<p>This app provides AI-assisted risk analysis and does not offer medical diagnosis or treatment. Always consult a qualified healthcare professional.</p>
+
+<h2>Data Deletion</h2>
+<p>Users may request data deletion by visiting:</p>
+<p><a href="deletion.html">Data Deletion Request Page</a></p>
+
+<h2>Contact</h2>
+<p>Email: sajjanvsl@gmail.com</p>
 
 </body>
 </html>
