--- a/deletion.html
+++ b/deletion.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Data Deletion - Early Stage Diabetes Prediction</title>
-<style>
-body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; line-height: 1.6; padding: 20px; }
-h1 { color: #c53030; }
-</style>
+  <title>Data Deletion Request</title>
 </head>
+<body style="font-family: Arial; max-width: 700px; margin: 40px auto;">
+  <h2>Data Deletion Request</h2>
 
-<body>
+  <p>
+  If you would like to request deletion of your data associated with
+  the Early Stage Diabetes Risk Assessment app, please contact us.
+  </p>
 
-<h1>Data Deletion Request</h1>
+  <h3>How to Request Deletion</h3>
+  <p>Email your request to:</p>
 
-<p><strong>App:</strong> Early Stage Diabetes Prediction</p>
-<p><strong>Developer:</strong> S. P. Sajjan</p>
+  <p><b>sajjanvsl@gmail.com</b></p>
 
-<h2>How to Request Deletion</h2>
-<p>If you would like your data to be deleted, please send an email with the subject:</p>
+  <h3>What We Delete</h3>
+  <ul>
+    <li>Any submitted health input data (if stored)</li>
+    <li>Associated research logs (if applicable)</li>
+  </ul>
 
-<p><strong>Subject:</strong> Data Deletion Request</p>
-<p><strong>Email:</strong> sajjanvsl@gmail.com</p>
+  <h3>Retention</h3>
+  <p>Deletion requests are processed within 7 working days.</p>
 
-<h2>What Will Be Deleted</h2>
-<ul>
-<li>Temporary input health data (if retained)</li>
-<li>Generated reports (if stored)</li>
-<li>Associated logs (non-personal)</li>
-</ul>
-
-<h2>Retention Policy</h2>
-<p>This application does not permanently store personal data. Any temporary records are removed periodically.</p>
-
-<h2>Processing Time</h2>
-<p>Deletion requests are processed within 7 business days.</p>
-
+  <p>This app does not require account creation.</p>
 </body>
 </html>
